--- a/starter/critter/src/main/resources/application.properties
+++ b/starter/critter/src/main/resources/application.properties
@@ -6,9 +6,10 @@ server.port=8082
 #       and provide the credentials below to access it
 spring.datasource.url=jdbc:mysql://localhost:3306/udacity?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=my-secret-pw
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.initialization-mode=always
 # uncomment the below lines to view sql output in console
 spring.jpa.show-sql=true
